# Reproductive_skew

./: .gitignore  CMakeLists.txt  README.md  build_insomnia.sh  config.yml  copy.sh  insomnia.sh  run_insomnia.sh  run_ubelix.sh  ubelix.sh  update_git_hash.sh
collections/: Heatmap_FixedImm_collection.yml  Heatmap_FixedRS_collection.yml  debug.yml  default_collection.yml  heatmap-Baseline_collection.yml  heatmap-CoevImmRS_collection.yml  heatmap-FixedImm_collection.yml  heatmap-FixedRS-Colonization_collection.yml  heatmap-FixedRS-FixedXrs_collection.yml  heatmap-FixedRS-LowerX0_collection.yml  heatmap-FixedRS_collection.yml
deployment/: build_and_run.sh  performanceTest.sh  run_local.sh
deployment/insomnia/: insomnia.sh  run_insomnia.sh
parameters/: FixedImm_Gamma05_mOff1_mRate03_Xrs1_Xe1_h1_Unpred_NoRelatedness.yml  FixedImm_Gamma05_mOff1_mRate03_Xrs1_Xe1_h1_Unpred_default.yml  FixedImm_Gamma1_mOff1_mRate03_Xrs1_Xe1_h1_Unpred_default.yml  baseline.yml  default.yml  example.yml  parameters.yml  parameters_debug.yml  unit_tests.yml
parameters/heatmap-Baseline/: Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs0_Xe0_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs0_Xe0_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs0_Xe0_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs0_Xe0_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs1_Xe1_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs1_Xe1_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs1_Xe1_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate01_Xrs1_Xe1_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs0_Xe0_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs0_Xe0_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs0_Xe0_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs0_Xe0_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs1_Xe1_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs1_Xe1_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs1_Xe1_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate02_Xrs1_Xe1_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs0_Xe0_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs0_Xe0_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs0_Xe0_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs0_Xe0_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs1_Xe1_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs1_Xe1_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs1_Xe1_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate03_Xrs1_Xe1_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs0_Xe0_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs0_Xe0_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs0_Xe0_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs0_Xe0_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs1_Xe1_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs1_Xe1_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs1_Xe1_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate04_Xrs1_Xe1_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs0_Xe0_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs0_Xe0_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs0_Xe0_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs0_Xe0_Unpred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs1_Xe1_Pred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs1_Xe1_Pred_default.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs1_Xe1_Unpred_NoRelatedness.yml  Baseline_Gamma05_Delta1_mOff025_mRate05_Xrs1_Xe1_Unpred_default.yml  (+1688 more)
parameters/heatmap-CoevImmRS/: CoevImmRS_mOff025_mRate01_Xrs0_Xe0_h0_Pred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_h0_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_h0_Unpred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_h0_Unpred_default.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_help_Pred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_help_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_help_Unpred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs0_Xe0_help_Unpred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe02_h0_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe02_h0_Unpred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe02_help_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe02_help_Unpred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_h0_Pred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_h0_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_h0_Unpred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_h0_Unpred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_h2_Unpred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_help_Pred_NoRelatedness.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_help_Pred_default.yml  CoevImmRS_mOff025_mRate01_Xrs1_Xe1_help_Unpred_NoRelatedness.yml  (+758 more)
src/: Parameters.cpp  Parameters.h  Simulation.cpp  Simulation.h
(+12375 files in other folders)
